--- a/house.html
+++ b/house.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/230211/glmatrix.min.js"></script>
+<script src="gl-matrix.js"></script>
 
 
 <script id="fill-shader" type="x-shader/x-fragment">
