--- a/house.html
+++ b/house.html
@@ -1,7 +1,5 @@
 
 <html>
-<head>
-
 <body>
 
 <script src="gl-matrix.js"></script>
@@ -22,18 +20,17 @@
     attribute vec4 aVertexColor;
 
     uniform mat4 uMVMatrix;
-    uniform mat4 uPMatrix;
+    uniform mat4 uniformCameraMatrix;
 
     varying vec4 vColor;
 
     void main(void) {
-        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+        gl_Position = uniformCameraMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
         vColor = aVertexColor;
     }
 </script>
 
-
-<canvas style="background: #eee; border: none;" width="300" height="300"></canvas>
+<canvas style="border: none;" width="300" height="300"></canvas>
 
 </body>
 
@@ -114,17 +111,17 @@ function initShaders() {
   shaderProgram.vertexColorAttribute = gl.getAttribLocation(shaderProgram, "aVertexColor");
   gl.enableVertexAttribArray(shaderProgram.vertexColorAttribute);
 
-  shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
-  shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
+  shaderProgram.cameraMatrixUniform = gl.getUniformLocation(shaderProgram, "uniformCameraMatrix");
+  shaderProgram.moveMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
 }
 
 
-var mvMatrix = mat4.create();
-var pMatrix = mat4.create();
+var moveMatrix = mat4.create();
+var cameraMatrix = mat4.create();
 
 function setMatrixUniforms() {
-  gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
-  gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
+  gl.uniformMatrix4fv(shaderProgram.cameraMatrixUniform, false, cameraMatrix);
+  gl.uniformMatrix4fv(shaderProgram.moveMatrixUniform, false, moveMatrix);
 }
 
 
@@ -154,18 +151,6 @@ function bufferColors(colors, count) {
 }
 
 
-function setCamera() {
-  gl.clearColor(1.0, 1.0, 1.0, 1.0);
-  gl.enable(gl.DEPTH_TEST);
-
-  gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
-  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-
-  mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 0.1, 100.0, pMatrix);
-
-  mat4.identity(mvMatrix);
-}
-
 
 
 function drawShape(shape) {
@@ -173,7 +158,7 @@ function drawShape(shape) {
 
   var vertexColorBuffer = bufferColors(shape.colors, shape.pointCount)
 
-  mat4.translate(mvMatrix, shape.position);
+  mat4.translate(moveMatrix, shape.position);
 
   gl.bindBuffer(gl.ARRAY_BUFFER, vertexPositionBuffer);
   gl.vertexAttribPointer(
@@ -240,7 +225,14 @@ function drawWindow() {
   initGL(canvas);
   initShaders();
 
-  setCamera()
+  gl.clearColor(1.0, 1.0, 1.0, 1.0);
+  gl.enable(gl.DEPTH_TEST);
+  gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
+  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+  mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 0.1, 100.0, cameraMatrix);
+
+  mat4.identity(moveMatrix);
 
   for(var i=0; i<shapes.length; i++) {
     drawShape(shapes[i])
