--- a/house.html
+++ b/house.html
@@ -42,7 +42,6 @@
 
 
 var shapes = [
-
   {
     name: "square",
     position: [-1.5, 0.0, -7.0],
@@ -74,7 +73,8 @@ var shapes = [
       0.9, 0.4, 0.7, 1.0,
       0.8, 0.4, 0.9, 1.0
     ]
-  },]
+  },
+]
 
 function getShapeData(shapeId, key, i) {
   return shapes[shapeId][key][i]
@@ -196,19 +196,35 @@ var cameraPosition = element.template(
 )
 
 var cameras = {
+  "front": {
+    fovy: 45,
+    near: 0.1,
+    far: 100.0,
+    pitch: 0.0,
+    yaw: 0.0,
+    xPos: 0.0,
+    yPos: 0.4,
+    zPos: 0.0  
+  },
   "over the shoulder": {
-    pitch: 0.2
+    fovy: 45,
+    near: 0.1,
+    far: 100.0,
+    pitch: 0.0,
+    yaw: 10.0,
+    xPos: 0.0,
+    yPos: 0.4,
+    zPos: 0.0  
   }
 }
 
 
 function setCameraPosition(name) {
-    if (!cameras[name]) {
+  if (!cameras[name]) {
     throw new Error("No camera named "+name)
   }
-  camera.yaw = cameras[name].yaw
+  camera = cameras[name]
   render()
-  console.log("rerendered")
 }
 
 function drawCameraPositions() {
@@ -220,16 +236,7 @@ function drawCameraPositions() {
   )
 }
 
-var camera = {
-  fovy: 45,
-  near: 0.1,
-  far: 100.0,
-  pitch: 0.0,
-  yaw: 0.0,
-  xPos: 0.0,
-  yPos: 0.4,
-  zPos: 0.0  
-}
+var camera = cameras["front"]
 
 function render() {
   drawScene.buffer(shapes)
